--- a/src/projects/HYMN/styles/_library.scss
+++ b/src/projects/HYMN/styles/_library.scss
@@ -6,7 +6,7 @@
   width: 20rem;
   height: 100%;
   overflow: scroll;
-  background: rgb(14, 6, 11);
+  background: linear-gradient(to right top, #1a1a1acc, #68686838);
   transform: translateX(-100%);
   transition: all 0.5s ease;
   opacity: 0;
