--- a/src/projects/HYMN/styles/_nav.scss
+++ b/src/projects/HYMN/styles/_nav.scss
@@ -1,5 +1,5 @@
 nav {
-  margin-top: 5px;
+  margin-top: 15px;
   margin-left: 100px;
   min-height: 10vh;
   display: flex;
@@ -10,28 +10,28 @@ nav {
     border: none;
     cursor: pointer;
     padding: 0.5rem 1rem;
-    border: 1.5px solid rgb(201, 97, 173);
-    color: rgb(201, 97, 173);
+    border: 1.5px solid var(--primary-color);
+    color: var(--primary-color);
     font-weight: 600;
     border-radius: 5px;
     outline: none;
     transition: all 0.3s ease;
     &:hover {
       border-color: rgb(27, 27, 27);
-      background: rgb(145, 72, 125);
-      color: #c4bac2;
+      background: var(--primary-color);
+      color: var(--meta-color);
       outline: none;
     }
   }
   .library-active {
     border-color: rgb(27, 27, 27);
-    background: rgb(145, 72, 125);
-    color: #c4bac2;
+    background: var(--primary-color);
+    color: var(--meta-color);
     outline: none;
   }
-  h1 {
-    font-size: 1.5rem;
-    color: white;
+  .logo {
+    width: 5rem;
+    padding-top: 10px;
   }
 }
 
