--- a/src/projects/HYMN/styles/_nav.scss
+++ b/src/projects/HYMN/styles/_nav.scss
@@ -5,6 +5,9 @@ nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  @media only screen and (max-width: 600px) {
+    margin-left: 0px;
+  }
   button {
     background: transparent;
     border: none;
