--- a/src/projects/HYMN/styles/_song.scss
+++ b/src/projects/HYMN/styles/_song.scss
@@ -5,7 +5,9 @@
   justify-content: center;
   align-items: center;
   margin-left: 100px;
-
+  @media only screen and (max-width: 600px) {
+    margin-left: 0px;
+  }
   img {
     width: 23%;
     border-radius: 50%;
@@ -20,10 +22,18 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 600px) {
   .song-container {
     img {
-      width: 60%;
+      width: 45%;
+    }
+  }
+}
+@media screen and (max-width: 600px) {
+  .song-container {
+    h2 {
+      padding: 2rem 1rem 1rem 1rem;
+      color: white;
     }
   }
 }
